ugly hack to prevent in-content-hero captions from getting too wide.

--- a/assets/css/src/layout/posts-pages.scss
+++ b/assets/css/src/layout/posts-pages.scss
@@ -324,7 +324,8 @@
     }
 
     &.in-content-hero {
-      display: block;
+      display: flex;
+      flex-direction: column;
       max-height: calc(500px + 3em);
       max-width: 500px;
 
@@ -338,8 +339,12 @@
         margin-top: 1em;
         margin-left: flex-grid(-1);
       }
-
+      img {
+        flex: 1 1 auto;
+      }
       .hero-caption {
+        flex: 1 0 auto;
+        width: fit-content;
         margin-left: 0;
         margin-right: 0;
 
